Use double quotes in templates
Change-Id: I075f81fae057937170306b9ec7672667ea350e89

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -1,6 +1,6 @@
 {{{html-skinstart}}}
 <div id="mw-wrapper">
-    <div class='mw-body' 'id'='content' 'role'='main'>
+    <div class="mw-body" "id"="content" "role"="main">
         {{{html-sitenotice}}}
         {{{html-talknotice}}}
         {{{html-indicators}}}
