Reduce template props passed to template
* Skin template should not need the skin start/end HTML in it
* Merge notices into one

Change-Id: I5d48049ccdae24342ccfcbabc76c8521212f512a

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -1,8 +1,6 @@
-{{{html-skinstart}}}
 <div id="mw-wrapper">
     <div class="mw-body" "id"="content" "role"="main">
-        {{{html-sitenotice}}}
-        {{{html-talknotice}}}
+        {{{html-notices}}}
         {{{html-indicators}}}
         <h1 class="firstHeading" lang="{{pagelanguage}}">{{{html-pagetitle}}}</h1>
         <div id="siteSub">{{{html-tagline}}}</div>
@@ -28,4 +26,3 @@
         {{{html-footer}}}
     </div>
 </div>
-{{{html-skinend}}}
