Logo should not be a raw HTML string
Change-Id: I79ce9bfbe376a478dd78def7b4120b022e858cf3

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -1,3 +1,12 @@
+<header>
+    <div id="p-logo" class="mw-portlet" role="banner">
+        {{#logo}}
+        <a href="{{href}}" class="mw-wiki-logo" title="{{title}}">
+            {{text}}
+        </a>
+        {{/logo}}
+    </div>
+</header>
 <div id="mw-wrapper">
     <div class="mw-body" "id"="content" "role"="main">
         {{{html-notices}}}
@@ -17,7 +26,6 @@
         </div>
         <div id="mw-navigation">
             <h2>{{{html-navigationheading}}}</h2>
-            {{{html-logo}}}
             {{{html-search}}}
             <div id="user-tools">{{{html-usertools}}}</div>
             <div id="page-tools">{{{html-pagetools}}}</div>
