Drop visualClear from template properties
Too simple to need to be a template property

Change-Id: Ia8d746ef981b3092d32dda830e78af5c33d433dc

--- a/templates/skin.mustache
+++ b/templates/skin.mustache
@@ -24,7 +24,7 @@
                 <p>{{{html-undelete}}}</p>
             </div>
             {{{html-bodycontent}}}
-            {{{html-clear}}}
+            <div class="visualClear"></div>
             <div class="printfooter">{{{html-printfooter}}}</div>
             {{{html-categorylinks}}}
             {{{html-dataaftercontent}}}
